# modern-board

./: .gitignore  .pre-commit-config.yaml  DOCKER.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test-autonomous-dev.md
.github/ISSUE_TEMPLATE/: atomic-issue.md  parent-issue.md
.github/scripts/: analyze_project.py  create-child-issue.sh  parse_actions.py
.github/templates/: branch-cleanup-task.md  doc-organization-task.md  doc-pr-check-task.md  implementation-task.md  issue-creation-task.md  issue-decomposition-task.md  organization-task.md  project-management-issue.md  project-setup.md  (+1 more)
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  pyrightconfig.json
backend/api/: __init__.py  admin.py  apps.py  urls.py
backend/api/migrations/: 0001_initial.py
backend/api/models/: __init__.py  category.py  post.py  reaction.py  tag.py  thread.py  user_session.py
backend/api/services/: __init__.py
backend/api/tests/: conftest.py
backend/api/tests/snapshot/: __init__.py
backend/api/tests/unit/: test_models.py
backend/api/v1/: urls.py
backend/api/v1/categories/: serializers.py  urls.py  views.py
backend/api/v1/posts/: serializers.py  urls.py  views.py
backend/api/v1/stats/: serializers.py  urls.py  views.py
backend/api/v1/tags/: serializers.py  urls.py  views.py
backend/api/v1/threads/: serializers.py  urls.py  views.py
backend/config/: urls.py
backend/config/settings/: base.py  dev.py  production.py
docs/: CONTRIBUTING.md  DESIGN.md  DEVELOPMENT.md  GIT_FLOW.md
frontend/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  biome.json  lighthouse.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
scripts/: setup-labels.sh
(+73 files in other folders)
